--- a/.mackup.cfg
+++ b/.mackup.cfg
@@ -1,5 +1,4 @@
 [storage]
-engine = icloud
-
-[applications_to_ignore]
-zsh
+engine = file_system
+path = stack
+# or path = /some/folder/in/your/root
